--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body{
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
+    font-family: 'Anton', sans-serif;
 }
 .lorem{
     margin: 0 2rem;
@@ -34,13 +35,13 @@ margin-bottom: 4rem;
     }
 
 .h1-bienvenidos{
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     margin-top: 5rem;
     margin-bottom: 3rem;
 }
 .elegi{
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     
 }
@@ -267,6 +268,7 @@ button{
                 
                 
             }
+            
             
             
             
