listo para entregar

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,16 @@ body{
     margin: 0 2rem;
     text-align: justify;
 }
-.duki{
-  margin: 1.5rem 0;
-      } 
-.section-duki{
-margin-top: 6rem;
-margin-bottom: 4rem;
+.h3_remeras{
+    margin: 1.5rem 0;
+} 
+.section_h3{
+    margin-top: 6rem;
+    margin-bottom: 4rem;
+}
+
+.navegacion{
+    text-align: center;
 }
 
 .navegacion li{
@@ -22,41 +26,57 @@ margin-bottom: 4rem;
     margin-right: 5rem;
 }
 
+.formulario_contacto{
+    margin: 2rem 1rem;
+    
+}
+
 .formulario{
     border: solid;
+    margin: 0rem 1rem;
+    margin-right: 50rem;
+}
+.formulario1{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
     
 
-  .navegacion{
-        margin-bottom: 6rem;
-        margin-left: 15rem;
-        background-color:#176585;
-        padding: .3rem 1rem;
-        
-        
-    }
+
+.alineado{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .h1-bienvenidos{
     color: rgb(0, 0, 0);
     text-align: center;
-    margin-top: 5rem;
+    margin-top: 2rem;
     margin-bottom: 3rem;
 }
+
+
+
 .elegi{
     color: rgb(0, 0, 0);
     text-align: center;
     
 }
+
 ul{
     list-style: none;
     display: center;
 
-    
 }
+
 a{
     text-decoration: none;
     color: white;
 }
+
 .card__parrafo{
     font-size: 1.8rem;
     
@@ -64,6 +84,7 @@ a{
 .card__parrafo--grande{
     font-size: 1.3rem;
 }
+
 button{
     padding: 1rem;
     
@@ -76,228 +97,177 @@ button{
 .productos{
     text-align: center;
     margin-bottom: 5rem;
+    margin-top: 3rem;
 }
 .card__img{
     border:solid  rgb(0, 0, 0);
 }
 
-/*.card{
-   
-    padding: 3rem;
-    border: solid white;
-    width: 21rem
-    }*/
 
 
+    
+
+.card{
+    width: 20rem;
+    border: solid black;
+    margin-bottom: 5rem;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.card_body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+    
+img{
+    max-width: 100%;
+
+}
+
+.padre_card{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+        
+}
+    
+
+footer{
+    text-align: center;
+}
+
+    
+.card__parrafo2{
+    font-size: 1.8rem;
+}
 
 
-/*.card_img2{
+.parrafo_descuento{
+    font-size: 1.3rem;
+    text-decoration: line-through;
+    color: grey;
+}
+        
+
+.card_img2{
     width: 20rem;
     height: 20rem;
-    border: solid black;
-
-    
-    
+            
 }
-.card_2{
-    padding: 3rem;
-    border: solid white;
-    width: 21rem;
-    position: relative;
-    }
-    .card__parrafo2{
-        font-size: 1.8rem;
-    }
-    .parrafo_descuento{
-        font-size: 1.3rem;
-        text-decoration: line-through;
-        color: grey;
-    }
-
+        
 
 .oferta{
     background-color: yellow;
     width: max-content;
-    }
-
-    
-.precio-descuento{
-        font-size: 1.3rem;
-
-    }
-
-.card_3{
-    padding: 3rem;
-    border: solid white;
-    width: 21rem;
-    position: relative;
 }
+            
+
+.precio-descuento{
+    font-size: 1.3rem;
+}
+        
+            
 .card_img3{
     width: 20rem;
     height: 20rem;
-    border: solid black;
+}
 
-}
-.card__parrafo3{
-    font-size: 1.8rem;
-}
-.parrafo3__precio{
-    font-size: 1.3rem;
-}
+
 .card_4{
     padding: 3rem;
-    border: solid white;
+    border: solid rgb(203, 59, 59);
     width: 21rem;
     position: relative;
 }
-
+            
 .card__parrafo4{
     font-size: 1.8rem;
 }
+
+
 .parrafo4__precio{
     font-size: 1.3rem;
 }
 
-  display: flex;
-    height: 200rem;
-    justify-content: space-evenly;
-    align-content: center;
-    flex-wrap: wrap; */
+footer{
+    text-align: center;
+}
 
-    
 
-    .card{
-        width: 20rem;
-         border: solid black;
-         margin-bottom: 5rem;
-         margin-right: auto;
-         margin-left: auto;
-        
-         
-         
-
-    }
-    .card_body{
-        display: flex;
-        flex-direction: column;
-      justify-content: space-between;
-      
-
-    }
-   
-    
-    img{
-        max-width: 100%;
-    }
-    .padre_card{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        
-       
-        
-        
-        
-    }
-    
-
-    footer{
-        text-align: center;
-    }
-
-    
-        .card__parrafo2{
-            font-size: 1.8rem;
-        }
-        .parrafo_descuento{
-            font-size: 1.3rem;
-            text-decoration: line-through;
-            color: grey;
-        }
-        .card_img2{
-            width: 20rem;
-            height: 20rem;
+.modelo-remera{
+    width: 35em;
+    border:solid #ffffff;
+    margin-left: 22rem;
+    margin-top: 5rem;
+}
             
-        }
-        .oferta{
-            background-color: yellow;
-            width: max-content;
-            }
-            .precio-descuento{
-                font-size: 1.3rem;
-        
-            }
-        
+#carouselExampleIndicators {
+    width: 50%;
+    margin: 0% auto;
+    margin-top: 5rem;
+}
             
-            .card_img3{
-                width: 20rem;
-                height: 20rem;
-               
+.guia_talles{
+    text-align: center;
+    margin-top: 3rem;
+}
             
-            }
-           
+.devolucion{
+    text-align: center;
+    margin-top: 5rem;
 
-            .card_4{
-                padding: 3rem;
-                border: solid rgb(203, 59, 59);
-                width: 21rem;
-                position: relative;
-            }
-            
-            .card__parrafo4{
-                font-size: 1.8rem;
-            }
-            .parrafo4__precio{
-                font-size: 1.3rem;
-            }
+}
 
-       
-       
-       
+.politica1{
+    text-align: center;
+    padding: 0rem 15rem;
+}
+
+.aqui_mapa{
+    margin-top: 3rem;
+}
+            
+            
+            
+@media screen and (max-width: 450px) {
+    .nube_nav{
+        width: 125px;
+        height: 75px;                      
+    }
+    .nube{
+        width: 125px;
+        height: 75px;
+    }
+        .h1-bienvenidos{
+        font-size: 1rem;
+    }
+        .elegi{
+        font-size: .8rem;
+    }
+        .h3_remeras{
+        font-size: 0.8rem;
+    }
         footer{
-            text-align: center;
-        }
-        @media screen and (min-width: 768px) {
-            body {
-                    background-color: #000000;
-              }
-            }
-            
-            .modelo-remera{
-                width: 35em;
-                border:solid #ffffff;
-                margin-left: 22rem;
-                margin-top: 5rem;
-                
-                
-            }
-            
-            #carouselExampleIndicators {
-                width: 50%;
-                margin: 0% auto;
-                margin-top: 5rem;
-            }
-            
-            
-            
-            
-            /*.grid-container{
-                display: grid;
-                grid-template-areas: 
-                "header header"
-                "main main"
-                "footer footer";
+        font-size: 0.8rem;
+    }
 
-            }
+}
 
-            .grid-header{
-                grid-area: "header";
-                
-            }
+@media screen and (max-width: 745px) {
+    .padre_card{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+                    
+    }
+}
             
-            .grid-main{
-                grid-area: "main";
-            }
-
-            .grid-footer{
-                grid-area: "footer";
-            }*/
+            
+            
+            
+            
+            
+            
+            
+            
