--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -18,6 +18,20 @@ margin-right: 5rem;
 
 
 
+.medidas{
+width: 20rem;
+height: 20rem;
+}
+
+.card-precio {
+    font-size: 1.3rem;
+}
+
+.card-parrafo{
+    font-size: 1.8rem;
+}
+
+
 
 
 
